test/negative/unary-W02.cfr
// Test for negative weakuntil constraint

a
 b ?
  c ?
  d ?
  [c W ]


// Fail to parse as expected 
